# blackhole-raytracer

./: .gitignore  LICENSE  README.md  integration_analysis.py  main.py  pyproject.toml  trajectory_analysis.py
blackhole_raytracer/: __init__.py  config.py
blackhole_raytracer/core/: cuda_kernels.py  cuda_kernels_adaptive.py  integrators.py  physics.py  utils.py
blackhole_raytracer/gui/: main_window.py
blackhole_raytracer/renderers/: disk_renderer.py  image_renderer.py  webcam_renderer.py
