[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blackhole-raytracer"
version = "0.1.0"
description = "CUDA-accelerated Schwarzschild black hole raytracer comparing seven numerical integration methods"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Alex Scartazzini"},
]
license = {text = "MIT"}
keywords = ["black-hole", "general-relativity", "raytracing", "numerical-methods", "cuda", "astrophysics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "matplotlib",
    "numba",
    "numpy",
    "opencv-python",
    "pandas",
    "pillow",
    "pyopengl",
    "pyqt5",
    "pyqtgraph",
    "scipy",
]

[project.scripts]
blackhole-raytracer = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["blackhole_raytracer"]
